--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "0http": "^3.5.2",
     "autocannon": "^7.14.0",
+    "better-sqlite3": "^9.2.2",
     "express": "^4.18.2",
     "fastify": "^4.24.3",
     "h3": "^1.9.0",
     "hyper-express": "^6.14.3",
+    "markdown-table": "^3.0.3",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
+    "sqlite3": "^5.1.6",
     "uwebsockets-express": "^1.3.5"
   }
 }
