--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,8 @@ services:
       POSTGRES_DB: pgdb
       POSTGRES_USER: pguser
       POSTGRES_PASSWORD: pgpass
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
