--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-table": "^3.0.3",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "redis": "^4.6.11",
     "sqlite3": "^5.1.6",
     "uwebsockets-express": "^1.3.5"
   }
